5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1716_2508.log
== TEST (2019-05-14 17:27:32) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*(-1)
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:27:45) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*(-1)
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:27:53) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*-1
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*-1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:28:03) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*(-1)
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:28:43) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*(-1)
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:28:45) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
sinal=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	sinal=sinal*(-1)
	den1+=2
	den2+=2
	den3+=2
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:15) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=3+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:34) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:35) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:36) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:36) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:29:36) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((sinal)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:32:33) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:32:34) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:32:39) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 14
    den1 += 2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:32:46) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    den1 += 2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:33:20) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 =den1+ 2
	den2 =den2+ 2 
	den3 =den3+ 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:33:21) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 =den1+ 2
	den2 =den2+ 2 
	den3 =den3+ 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:06:52) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s*(-1)
	den1 =den1+ 2
	den2 =den2+ 2 
	den3 =den3+ 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s*(-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:07:14) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s = s
	den1 =den1+ 2
	den2 =den2+ 2 
	den3 =den3+ 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s = s
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:08:34) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s *= -1
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:08:53) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s *= -1
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:09:05) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	CO+=1
print(soma)
-- ERROR:
File "XXXX", line 13
    CO+=1
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:09:15) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))

print(soma)
-- ERROR:
File "XXXX", line 14
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:09:22) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:09:54) 
-- CODE:
from math import*

p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s *= -1
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
	
-- ERROR:
File "XXXX", line 13
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:10:10) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s *= -1
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
	
-- ERROR:
File "XXXX", line 11
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:10:26) 
-- CODE:
p=int(input("primeiro valor: "))


	
-- ERROR:
File "XXXX", line 11
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:11:24) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
soma=3
den1=2
den2=3
den3=4
s=1
while(CO<p):
	soma=soma+((s)*(4/(den1*den2*de3))
	s *= -1
	den1 += 2
	den2 += 2 
	den3 += 2 
	CO+=1
-- ERROR:
File "XXXX", line 11
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:11:58) 
-- CODE:
p=int(input("primeiro valor: "))


-- ERROR:
File "XXXX", line 11
    s *= -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:14:55) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3

while(p<CO):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:07) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:32) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:49) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	print(soma)
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:16:50) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:04) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:21) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:17:41) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
-- EXECUTION TIME:
0.211397
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:

-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:17:41) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
-- ERROR:
File "XXXX", line 10
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:18:10) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.137728
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:12) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:32) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:35) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:39) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:42) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+(SINAL*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:19:16) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:19:18) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:19:20) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p<CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:20:30) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- EXECUTION TIME:
0.139684
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:20:45) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:20:51) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:20:54) 
-- CODE:
p=int(input("primeiro valor: "))

CO=1
SINAL=1
D1=2
D2=3
D3=4
SOMA=3
while(p>CO):
	SOMA=SOMA+((SINAL)*(4/(D1*D2*D3)))
	SINAL*=-1
	D1+=2
	D2+=2
	D3+=2
	CO+=1
print(round(SOMA,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
